<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_question"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.rtc.somruethaianusa.animal.question"
    android:background="@drawable/wall15">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_centerInParent="false"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">

        <TextView
            android:text="@string/TextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/TextView"
            android:layout_gravity="center_horizontal"
            android:textSize="@dimen/h1"
            android:textStyle="bold"
            android:textColor="@android:color/background_dark" />

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:srcCompat="@drawable/bird"
            android:id="@+id/imvAnimal"
            android:layout_gravity="center_horizontal"
            android:background="@drawable/bird" />

        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/radAnswer">

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/select1"
                android:id="@+id/rad1"
                android:layout_weight="0"
                android:textSize="@dimen/h3" />

            <RadioButton
                android:text="@string/select2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/rad2"
                android:layout_weight="0"
                android:textSize="@dimen/h3" />

            <RadioButton
                android:text="@string/select3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/rad3"
                android:layout_weight="0"
                android:textSize="@dimen/h3" />

            <RadioButton
                android:text="@string/select4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/rad4"
                android:layout_weight="0"
                android:textSize="@dimen/h3" />

            <Button
                android:text="@string/answer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/button2"
                android:onClick="ClickAnswer"
                android:layout_weight="0"
                android:textSize="@dimen/h2" />
        </RadioGroup>

    </LinearLayout>

</RelativeLayout>
